# webmas

./: README.md  addData.py  add_data.py  add_data2.py  app.py  compile c++.txt  randomweather.cpp  testfile.txt  weatherdata.txt  weatherdata1.txt
mcu/: CMakeLists.txt  ambient.c  ambient.h  garden.hex  garden.uf2  hydro.c  hydro.h  main.c  temphum16.c  temphum16.h
static/css/: main.css
static/js/: charts.js  dateandtime.js
templates/: base.html  index.html
web/: app.py  garden.db  test.db
web/static/css/: main.css  queries.css  style.css
web/static/js/: charts.js  dateandtime.js
web/templates/: base.html  index.html
